[package]
name = "sstable"
description = "Sorted String Tables, an on-disk format for storing immutable maps consisting of string,string pairs, and retrieving values by key efficiently. This crate also features bloom filters, checksums and skipping bad blocks."
version = "0.4.4"
readme = "README.md"
keywords = ["sstable", "database"]
repository = "https://bitbucket.org/dermesser/sstable"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
license = "MIT"
documentation = "https://docs.rs/sstable"

[dependencies]
crc = "1.2"
integer-encoding = "1.0"
snap = "0.2"

[dev-dependencies]
time-test = "0.2"
