[package]
name = "sstable"
description = "Sorted String Tables, an on-disk format for storing immutable maps consisting of string,string pairs, and retrieving values by key efficiently. This crate also features bloom filters, checksums and skipping bad blocks. It is based on the code implemented for the rusty_leveldb crate."
version = "0.6.2"
readme = "README.md"
keywords = ["sstable", "database"]
repository = "https://borgac.net/lbo/hg/sstable/"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
license = "MIT"
documentation = "https://docs.rs/sstable"

[dependencies]
crc = "1.2"
integer-encoding = "1.0"
snap = "0.2"

[dev-dependencies]
time-test = "0.2"

[workspace]
members = ["examples/rw_sstable"]
