[package]
name = "sstable"
description = "Sorted String Tables, an on-disk format for storing immutable maps consisting of string,string pairs, and retrieving values by key efficiently. This crate also features bloom filters, checksums and skipping bad blocks. It is based on the code implemented for the rusty_leveldb crate."
version = "0.8.1"
readme = "README.md"
keywords = ["sstable", "database"]
repository = "https://github.com/dermesser/sstable"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
license = "MIT"
documentation = "https://docs.rs/sstable"
edition = "2018"

[dependencies]
crc = "1.2"
integer-encoding = "1.0"
snap = "0.2"

[dev-dependencies]
time-test = "0.2"
bencher = "0.1"
rand = "0.7"

[[bench]]
name = "sstable"
harness = false

[workspace]
members = ["examples/rw_sstable"]
